<resources>
    <string name="app_name" translatable="false">Stalker</string>
    <string name="title_activity_main" translatable="false">Stalker</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="action_sort">Sort by</string>
    <string name="action_sort_by_name">Sort by Name</string>
    <string name="action_sort_by_id">Sort by ID</string>
    <string name="action_sort_by_sex">Sort by Sex</string>
    <string name="action_sort_by_department">Sort by Department</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_exit">Exit</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_program">PROGRAM</string>
    <string name="title_stalker" translatable="false">STALKER</string>
    <string name="title_friends">FRIENDS</string>
    <string name="title_overview">OVERVIEW</string>
    <string name="title_students">STUDENTS</string>
    <string name="title_sections">SECTIONS</string>
    <string name="title_instructors">INSTRUCTORS</string>
    <string name="title_activity_instructors">INSTRUCTORS</string>
    <string name="title_activity_departments">DEPARTMENTS</string>
    <string name="title_activity_courses">COURSES</string>
    <string name="title_activity_help">Help Page</string>
    <string name="title_activity_feedback">Send Feedback</string>
    <string name="title_activity_bus">Bus Schedule</string>
    <string name="not_ready_yet">This function is not ready yet</string>
    <string name="drawer_departments">Departments</string>
    <string name="drawer_instructors">Instructors</string>
    <string name="drawer_courses">Courses</string>
    <string name="drawer_features">Features</string>
    <string name="drawer_interesting_facts">Interesting Facts</string>
    <string name="drawer_program_scheduler">Program Scheduler</string>
    <string name="drawer_gpa">GPA Calculator</string>
    <string name="drawer_bus">Bus Schedule</string>
    <string name="drawer_midterm">Midterm Schedule</string>
    <string name="drawer_free_rooms">Free Rooms</string>
    <string name="drawer_final">Final Schedule</string>
    <string name="drawer_app">App</string>
    <string name="drawer_help">Help Page</string>
    <string name="drawer_feedback">Send Feedback</string>
    <string name="drawer_about">About Us</string>
    <string name="prompt_password">ID</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_id">This ID is invalid</string>
    <string name="error_incorrect_password">This ID is not found</string>
    <string name="error_field_required">This field is required</string>
    <string name="welcome_message">Welcome to Stalker APP. Enter your id number and start to stalk your crush :P</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wen</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="xxx_has_removed">%1$s has removed.</string>
    <string name="all_friends_removed">All your friends removed.</string>
    <string name="remove_all">Remove all</string>
    <string name="send_mail">Send mail</string>
    <string name="comfirm_deletion">Confirm Deletion...</string>
    <string name="comfirm_delete_all">Are you sure you want delete all your friends?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="no_mail_found">No mail found...</string>
    <string name="preferences">Preferences</string>
    <string name="more_than_60_minutes">It cannot be more than 60 minutes</string>
    <string name="less_than_0_minute">It cannot be less than 0 minute</string>
    <string name="minutes">%1$s minutes</string>
    <string name="days">%1$s day</string>
    <string name="at_every_opening">at every opening</string>
    <string name="notification_preferences">Notifications</string>
    <string name="notification_allow">Allow the notifications</string>
    <string name="notification_x_minute">Send notification x minutes before the class</string>
    <string name="notification_alert_type">Alert type</string>
    <string name="update_preferences">Updates</string>
    <string name="auto_update_check_allow">Allow auto update checking</string>
    <string name="auto_update_check_cycle">Update checking time cyle</string>
    <string name="title_activity_web_browser" translatable="false">WebBrowserActivity</string>
    <string name="about">About</string>
    <string name="about_current_db">Current DB version: </string>
    <string name="gpa">Your GPA</string>
    <string name="calculate_gpa">Calculate GPA</string>
    <string name="free_friends">Free Friends</string>
    <string name="choose_an_app">Choose an app</string>
    <string name="nothing_to_send">There is nothing to send.</string>
    <string name="share_as_image">Share as Image</string>
    <string name="copied_id">Copied student id to Clipboard!</string>
    <string name="show_midterms">Show Midterms</string>
    <string name="show_finals">Show Finals</string>
    <string name="stats">Stats</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unisex">Unisex</string>
    <string name="total">Total</string>
    <string name="with_photo">With Photo</string>
    <string name="midterms_title">Midterm Schedule</string>
    <string name="midterms_show_all">SHOW ALL</string>
    <string name="cannot_find_midterm">I can\'t find any midterm for you. But check the ETU-BIS for more realiable info.</string>
    <string name="final_title">Final Schedule </string>
    <string name="final_manual">GO MANUAL</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="connection_error">Can\'t connect to the server.\nDo you want to see cache from: %1$s ?</string>
    <string name="connection_error_no_cache">Can\'t connect to the server.</string>
    <string name="cannot_find_final">I can\'t find any final for you. But check the ETU-BIS for more realiable info.</string>
    <string name="not_now">NOT NOW</string>
    <string name="go_etu_bis">GO etu-bis</string>
    <string name="executing">Executing...</string>
    <string name="free_rooms_title">Free Rooms</string>
    <string name="click_to_see">Click to see</string>
    <string name="recreating_db">Recreating databases. It should take between 5 and 40 seconds</string>
    <string name="checking_for_update">Checking for update...</string>
    <string name="code">Code:</string>
    <string name="title">Title:</string>
    <string name="section">Section:</string>
    <string name="total_size">Total Size:</string>
    <string name="lecturer">Lecturer:</string>
    <string name="size">Size:</string>
    <string name="AKA">AKA:</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="office">Office:</string>
    <string name="major">Major:</string>
    <string name="website" translatable="false">Website:</string>
    <string name="tel">TEL:</string>
    <string name="image">Image:</string>
    <string name="id">ID:</string>
    <string name="year">Year:</string>
    <string name="minor">Minor:</string>
    <string name="faculty">Faculty:</string>
    <string name="course">Course:</string>
    <string name="program_scheduler_ready">Ready to go</string>
    <string name="program_scheduler_reminder">If you sure that you choose right courses go press the tick button</string>
    <string name="program_scheduler_have_to">Choose the courses that you HAVE TO take</string>
    <string name="program_scheduler_not_have_to">Courses that you don\'t have to take</string>
    <string name="program_scheduler_no_way">No way to schedule that program!</string>
    <string name="program_scheduler_scheduled">Scheduled %1$d different program!</string>
    <string name="program_scheduler_choose_at_least">Choose at least 1 course please</string>
    <string name="max_conflict">Choose a Max Conflict Number</string>
    <string name="table_column_course_number"># Course</string>
    <string name="table_column_morning"># 8:30 Class</string>
    <string name="table_column_day"># School Day</string>
    <string name="table_column_conflict"># Conflict</string>
    <string name="filter_everyone">Everyone</string>
    <string name="filter_active">Active</string>
    <string name="filter_inactive">Inactive</string>
    <string name="filter_male">Male</string>
    <string name="filter_female">Female</string>
    <string name="filter_unisex">Unisex</string>
    <string name="filter_year">Year</string>
    <string name="filter_choose">Choose filter</string>
    <string-array name="grades" translatable="false">
        <item>AA</item>
        <item>BA</item>
        <item>BB</item>
        <item>CB</item>
        <item>CC</item>
        <item>DC</item>
        <item>DD</item>
        <item>FF</item>
    </string-array>
    <string-array name="credits">
        <item>No credit</item>
        <item>1 credit</item>
        <item>2 credits</item>
        <item>3 credits</item>
        <item>4 credits</item>
        <item>5 credits</item>
        <item>6 credits</item>
    </string-array>
    <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
    <string name="aboutLibraries_description_showVersion" translatable="false">true</string>
    <string name="aboutLibraries_description_text">
        <![CDATA[This app will help you to stalk your friends.<br /><b>And of course help with following the school related stuff</b>]]>
    </string>
    <string name="aboutLibraries_description_special1_name">Contributors</string>
    <string name="aboutLibraries_description_special1_text" translatable="false">
        <![CDATA[<b>Burak UYAR</b> : Main Developer<br />
        <b>Fatih Erdem KIZILKAYA</b> : Server-side<br />
        <b>Kerim SIPER</b> : Owner of GPA Calculator idea<br />
        <b>Yusuf Cagri OGUT</b> : Owner of Program Scheduler idea<br />
        <b>Cagdas TERZI</b> : Tester<br />
        <b>Yunus IRHAN</b> : Halkla Iliskiler Muduru :D<br />]]>
    </string>
    <string name="aboutLibraries_description_special2_name">DB Version</string>
    <string name="aboutLibraries_description_special3_name">Changelog</string>
</resources>