<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="3.4"
            android:orientation="vertical"
            android:padding="16dp"
            android:weightSum="10"
            >

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/code"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#bce47d" />

                <TextView
                    android:id="@+id/course_code"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:textSize="18dp"
                    android:background="#abdef4" />

            </LinearLayout>



            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#e28bfa" />

                <TextView
                    android:id="@+id/course_title"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="8283001122"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:singleLine="true"
                    android:padding="3dp"
                    android:background="#e5f554" />

            </LinearLayout>



            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/section"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#f74834" />

                <TextView
                    android:id="@+id/section_numbers"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="ritesh.singh@betasoftsystems.com"
                    android:textSize="18dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#feaff2" />

            </LinearLayout>


            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/total_size"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#36abd5" />

                <TextView
                    android:id="@+id/total_size_of_course"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="Panchkula"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:singleLine="true"
                    android:padding="3dp"
                    android:background="#d48383" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/akaText"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/AKA"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#36abd5"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/akaButton"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="AKABUTTON"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:singleLine="true"
                    android:padding="3dp"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>