<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="3.4"
            android:orientation="vertical"
            android:padding="16dp"
            android:weightSum="10"
            >

            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#bce47d" />

                <TextView
                    android:id="@+id/dep_name"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:textSize="18dp"
                    android:background="#abdef4" />

            </LinearLayout>



            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/faculty"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#e28bfa" />

                <TextView
                    android:id="@+id/dep_faculty_name"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="8283001122"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:singleLine="true"
                    android:padding="3dp"
                    android:background="#e5f554" />

            </LinearLayout>



            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/website"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#f74834" />

                <TextView
                    android:id="@+id/dep_web"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textSize="18dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#feaff2" />

            </LinearLayout>


            <LinearLayout
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/size"
                    android:textSize="20dp"
                    android:textColor="@android:color/black"
                    android:padding="3dp"
                    android:background="#36abd5" />

                <TextView
                    android:id="@+id/total_size_of_dep"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:singleLine="true"
                    android:padding="3dp"
                    android:background="#d48383" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>